--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
-    "vite": "^5.0.0"
+    "vite": "^7.0.0",
+    "vite-plugin-vue-devtools": "^8.0.5"
   }
 }
